--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dikonakaya</title>
-    <link rel="icon" type="image/png" href="/logo.png" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dikonakaya</title>
+  <link rel="icon" type="image/png" href="/logo.png" />
+
+  <!-- Open Graph / Social preview -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Dikonakaya — Art Portfolio & Projects" />
+  <meta property="og:description" content="Pixel art, photography, and projects by Dikonakaya ヾ(•ω•`)o" />
+  <meta property="og:url" content="https://www.dikonakaya.com/" />
+
+  <meta property="og:image" content="/logo.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="630" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Dikonakaya — Art Portfolio & Projects" />
+  <meta name="twitter:description" content="Pixel art, photography, and projects by Dikonakaya  ヾ(•ω•`)o" />
+  <meta name="twitter:image" content="/logo.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
