--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="Pixel art, photography, and projects by Dikonakaya ヾ(•ω•`)o" />
   <meta property="og:url" content="https://www.dikonakaya.com/" />
 
-  <meta property="og:image" content="/logo.png" />
+  <meta property="og:image" content="/logo_630.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="630" />
   <meta property="og:image:height" content="630" />
@@ -22,7 +22,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Dikonakaya — Art Portfolio & Projects" />
   <meta name="twitter:description" content="Pixel art, photography, and projects by Dikonakaya  ヾ(•ω•`)o" />
-  <meta name="twitter:image" content="/logo.png" />
+  <meta name="twitter:image" content="/logo_630.png" />
 </head>
 
 <body>
