--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
   <title>Dikonakaya</title>
   <link rel="icon" type="image/png" href="/logo.png" />
 
-  <!-- Open Graph / Social preview -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Dikonakaya — Art Portfolio & Projects" />
   <meta property="og:description" content="Pixel art, photography, and projects by Dikonakaya ヾ(•ω•`)o" />
   <meta property="og:url" content="https://www.dikonakaya.com/" />
 
-  <meta property="og:image" content="/logo_2.png" />
+  <meta property="og:image" content="https://www.dikonakaya.com/banner.png" />
+  <meta property="og:image:secure_url" content="https://www.dikonakaya.com/banner.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <!-- Twitter card -->
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Dikonakaya — Art Portfolio & Projects" />
   <meta name="twitter:description" content="Pixel art, photography, and projects by Dikonakaya  ヾ(•ω•`)o" />
-  <meta name="twitter:image" content="/logo_2.png" />
+  <meta name="twitter:image" content="https://www.dikonakaya.com/banner.png" />
 </head>
 
 <body>
